:bug: fix avatar zindex too high (#529)

--- a/src/layout/brand/brand.module.css
+++ b/src/layout/brand/brand.module.css
@@ -31,6 +31,7 @@
 
 .mobileSidebarPortal {
   top: var(--layout-navbar-height);
+  z-index: 50;
 }
 
 .mobileSidebar {
